# combofox_simulation

./: Dockerfile  README.md  docker-compose.yaml  rqt_controllers_commands.perspective
src/awcombo_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/awcombo_moveit_config/config/: awcombo.ros2_control.xacro  awcombo.srdf  awcombo.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml
src/awcombo_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/descriptions/amr_combo_v2/: CMakeLists.txt  package.xml
src/descriptions/amr_combo_v2/config/: config.rviz
src/descriptions/amr_combo_v2/launch/: display.launch.py
src/descriptions/amr_combo_v2/meshes/: agv_link1.STL  base_footprint.STL  lidar_1_link.STL  lidar_2_link.STL  mpo_700_caster_back_left_link.STL  mpo_700_caster_back_right_link.STL  mpo_700_caster_front_left_link.STL  mpo_700_caster_front_right_link.STL  mpo_700_wheel_back_left_link.STL  mpo_700_wheel_back_right_link.STL  mpo_700_wheel_front_left_link.STL  mpo_700_wheel_front_right_link.STL
src/descriptions/amr_combo_v2/meshes_better_view/: agv_link1.STL  base_footprint.STL  lidar_1_link.STL  mpo_700_caster_back_left_link.STL  mpo_700_caster_back_right_link.STL  mpo_700_caster_front_left_link.STL  mpo_700_caster_front_right_link.STL  mpo_700_wheel_back_left_link.STL  mpo_700_wheel_back_right_link.STL  mpo_700_wheel_front_left_link.STL  mpo_700_wheel_front_right_link.STL
src/descriptions/amr_combo_v2/urdf/: amr_combo_v2.urdf.xacro  amr_combo_v2.xacro
src/descriptions/amr_combo_v3/: CMakeLists.txt  package.xml
src/descriptions/amr_combo_v3/config/: config.rviz
src/descriptions/amr_combo_v3/launch/: display.launch.py
src/descriptions/amr_combo_v3/meshes/: lidar_1_link.STL  mpo_700_caster_back_left_link.STL  mpo_700_caster_front_right_link.STL  mpo_700_wheel_back_left_link.STL  mpo_700_wheel_back_right_link.STL  mpo_700_wheel_front_right_link.STL
src/descriptions/amr_combo_v3/meshes_meshlab/: agv_link1.STL  base_footprint.STL  base_link.STL  lidar_2_link.STL  mpo_700_caster_back_right_link.STL  mpo_700_caster_front_left_link.STL  mpo_700_wheel_front_left_link.STL
src/descriptions/amr_combo_v3/meshes_original/: base_footprint.STL  lidar_1_link.STL  lidar_2_link.STL  mpo_700_caster_back_left_link.STL  mpo_700_caster_back_right_link.STL  mpo_700_caster_front_left_link.STL  mpo_700_caster_front_right_link.STL  mpo_700_wheel_back_left_link.STL  mpo_700_wheel_back_right_link.STL  mpo_700_wheel_front_left_link.STL  mpo_700_wheel_front_right_link.STL
src/descriptions/amr_combo_v3/urdf/: amr_combo_v3.urdf.xacro  amr_combo_v3.xacro
src/descriptions/awcombo_description/: CMakeLists.txt  README.md  package.xml
src/descriptions/awcombo_description/config/: awcombo.ros2_controllers.yaml  configuration.rviz
src/descriptions/awcombo_description/launch/: display.launch.py
src/descriptions/awcombo_description/urdf/: awcombo.xacro  awcombo_converted.xacro.urdf  awcombo_converted_old.urdf  awtube.ros2_control.xacro
src/descriptions/awtube2_18kg_v2/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/descriptions/awtube2_18kg_v2/config/: configuration.rviz
src/descriptions/awtube2_18kg_v2/launch/: display.launch.py
src/descriptions/awtube2_18kg_v2/meshes/: link1.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL
src/descriptions/awtube2_18kg_v2/meshes/controllo/: link2.STL  link3.STL  link4.STL  link5.STL  link6.STL
src/descriptions/awtube2_18kg_v2/urdf/: awtube2_18kg_v2.csv  awtube2_18kg_v2.urdf  awtube2_18kg_v2.urdf.xacro  awtube2_18kg_v2.xacro
src/descriptions/awtube31814v2/: package.xml
src/descriptions/camera_support/: CMakeLists.txt  package.xml
src/descriptions/camera_support/config/: configuration.rviz
src/descriptions/camera_support/launch/: display.launch.py
src/descriptions/camera_support/meshes/: base.STL  cam.STL
src/descriptions/camera_support/urdf/: camera_support.urdf  camera_support.urdf.xacro  camera_support.xacro
src/descriptions/grip_exon/: CMakeLists.txt  README.md  package.xml
src/descriptions/grip_exon/config/: configuration.rviz
src/descriptions/grip_exon/launch/: display.launch.py
src/descriptions/grip_exon/meshes/: GRIPPER.STL  RIF.STL
src/descriptions/grip_exon/urdf/: grip_exon.csv  grip_exon.urdf  grip_exon.urdf.xacro  grip_exon.xacro
src/descriptions/realsense_description/: package.xml
src/neo_local_planner2/: package.xml
src/neo_nav2_bringup/launch/: localization_neo.launch.py  navigation_neo.launch.py
src/neo_simulation2/: CMakeLists.txt  package.xml  setup.py
src/neo_simulation2/configs/awcombo/: navigation.rviz  navigation.yaml
src/neo_simulation2/launch/: navigation.launch.py  simulation.launch.py
src/neo_simulation2/robots/mpo_700/: mpo_700.urdf
src/neo_simulation2/worlds/: neo_track1.world
